# OS

./: .gitignore
lab1_OS/: CMakeLists.txt  Creator.cpp  Reporter.cpp  lab1_OS.cpp  lab1_OS.h
lab2_OS/: CMakeLists.txt  lab2_OS.cpp  lab2_OS.h  main.cpp
lab2_OS/tests/: test_min_max.cpp
lab3_OS/: CMakeLists.txt  lab3_OS.cpp  lab3_OS.h  main.cpp
lab3_OS/tests/: uTests.cpp  uTests.h
lab4_OS/: CMakeLists.txt  lab4_OS.cpp  lab4_OS.h  main.cpp
lab4_OS/tests/: unit_tests.cpp
lab5_OS/: CMakeLists.txt  lab5_OS.cpp  lab5_OS.h  main.cpp
lab5_OS/tests/: unit-tests.cpp
